--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,8 @@
 title: Blog Bibliotheks- und Archivinformatik
-author: Felix
-email: felix.lohmeier@fhgr.ch
+author: stemorit
 description: > # this means to ignore newlines until "baseurl:"
-  Vorlage für ein Lerntagebuch im Kurs Bibliotheks- und Archivinformatik FS2020
+  Vorlage für ein Lerntagebuch im Kurs Bibliotheks- und Archivinformatik HS2020
 
-# social links
-twitter_username: felixlohmeier # DO NOT include the @ character, or else the build will fail!
-github_username:  felixlohmeier # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima
