--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ description: > # this means to ignore newlines until "baseurl:"
 
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-theme: minima
+theme: jekyll-theme-dinky
