--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Blog Bibliotheks- und Archivinformatik
 author: stemorit
 description: > # this means to ignore newlines until "baseurl:"
-  Vorlage für ein Lerntagebuch im Kurs Bibliotheks- und Archivinformatik HS2020
+  Ein Lerntagebuch im Modul Bibliotheks- und Archivinformatik HS2020
 
 
 show_excerpts: true # set to false to remove excerpts on the homepage
